# Environmental-Data-Analysis

./: README.md
mobile/Android/RTMPPusher/app/: CMakeLists.txt  build.gradle
mobile/Android/RTMPPusher/app/src/androidTest/java/com/luxuan/rtmppusher/: ExampleInstrumentedTest.java
mobile/Android/RTMPPusher/app/src/main/: AndroidManifest.xml
mobile/Android/RTMPPusher/app/src/main/cpp/: AndroidLog.h  LxCallJava.cpp  LxCallJava.h  LxQueue.cpp  LxQueue.h  Lxpush.cpp  RtmpPush.cpp  RtmpPush.h  lxCallJava.cpp  lxCallJava.h  lxQueue.cpp  lxQueue.h
mobile/Android/RTMPPusher/app/src/main/java/com/luxuan/rtmppusher/: CameraActivity.java  ImageVideoActivity.java  LivePushActivity.java  MainActivity.java  VideoActivity.java  YuvActivity.java
mobile/Android/RTMPPusher/app/src/main/java/com/luxuan/rtmppusher/camera/: LxCamera.java  LxCameraFboRender.java  LxCameraRender.java  LxCameraView.java
mobile/Android/RTMPPusher/app/src/main/java/com/luxuan/rtmppusher/egl/: EglHelper.java  LXEGLSurfaceView.java  LxShaderUtil.java
mobile/Android/RTMPPusher/app/src/main/java/com/luxuan/rtmppusher/encodec/: LxBaseMediaEncoder.java  LxEncodecRender.java  LxMediaEncodec.java
mobile/Android/RTMPPusher/app/src/main/java/com/luxuan/rtmppusher/imgVideo/: LxImgFboRender.java  (+2 more)
mobile/Android/RTMPPusher/app/src/main/res/layout/: activity_camera.xml  activity_imagevideo.xml  activity_livepush.xml  activity_video.xml  activity_yuv.xml
mobile/Android/RTMPPusher/app/src/main/res/values/: strings.xml
mobile/Android/RTMPPusher/app/src/test/java/com/luxuan/rtmppusher/: ExampleUnitTest.java
(+309 files in other folders)
